{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 57,
  "lineage": "0ae5dd96-02c7-11c1-59d0-a75d3ac56d96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:internet-gateway/igw-0399935a799e4e0f4",
            "id": "igw-0399935a799e4e0f4",
            "owner_id": "911167924726",
            "tags": {
              "Name": "depi-dev-igw"
            },
            "tags_all": {
              "Name": "depi-dev-igw"
            },
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "dependencies": [
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:route-table/rtb-0eb36986639f5122f",
            "id": "rtb-0eb36986639f5122f",
            "owner_id": "911167924726",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:route-table/rtb-02114806e0fec38d1",
            "id": "rtb-02114806e0fec38d1",
            "owner_id": "911167924726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0399935a799e4e0f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a97fdd99d8990d38",
            "route_table_id": "rtb-0eb36986639f5122f",
            "subnet_id": "subnet-080cd11dcad4dc9cf"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047e140578676b384",
            "route_table_id": "rtb-0eb36986639f5122f",
            "subnet_id": "subnet-0ab82c0416d87cd46"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014900a5af55c7c7c",
            "route_table_id": "rtb-02114806e0fec38d1",
            "subnet_id": "subnet-0cfb080c5ecddaf01"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0813ed1b1b0b7a56d",
            "route_table_id": "rtb-02114806e0fec38d1",
            "subnet_id": "subnet-0dffa70c41aa0dba1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:subnet/subnet-080cd11dcad4dc9cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080cd11dcad4dc9cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167924726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Depi-Dev-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Depi-Dev-Private-Subnet-1"
            },
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "dependencies": [
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:subnet/subnet-0ab82c0416d87cd46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab82c0416d87cd46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167924726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Depi-Dev-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Depi-Dev-Private-Subnet-2"
            },
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "dependencies": [
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:subnet/subnet-0cfb080c5ecddaf01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfb080c5ecddaf01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167924726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Depi-Dev-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Depi-Dev-Public-Subnet-1"
            },
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "dependencies": [
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:subnet/subnet-0dffa70c41aa0dba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dffa70c41aa0dba1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167924726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Depi-Dev-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Depi-Dev-Public-Subnet-2"
            },
            "vpc_id": "vpc-0cbe0a82b39cb5a37"
          },
          "dependencies": [
            "aws_vpc.depi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "depi_dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911167924726:vpc/vpc-0cbe0a82b39cb5a37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e447680479a95d43",
            "default_route_table_id": "rtb-0b075997d96941477",
            "default_security_group_id": "sg-003378513e65a0395",
            "dhcp_options_id": "dopt-0fc42d07abe81edbd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbe0a82b39cb5a37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b075997d96941477",
            "owner_id": "911167924726",
            "tags": {
              "Name": "Depi-Dev-VPC"
            },
            "tags_all": {
              "Name": "Depi-Dev-VPC"
            }
          }
        }
      ]
    }
  ]
}